[project]
name = "nanolm"
version = "0.1.0"
description = "Experimental Language Model"
readme = "README.md"
authors = [
    { name = "stmugisha", email = "mstevejean@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "rs-bpe>=0.1.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "rs-bpe>=0.1.0",
    "ruff>=0.14.14",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
]
